--- a/OperaThemeMaker/OperaThemeMaker.vcxproj
+++ b/OperaThemeMaker/OperaThemeMaker.vcxproj
@@ -96,10 +96,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)\External\imgui\backends;$(SolutionDir)\External\imgui;%VULKAN_SDK%\Include;$(SolutionDir)\External\glfw\include;$(SolutionDir)\External\HawtLib\HawtLib\Build\Debug_DLL\Win32\Output</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>vulkan-1.lib;glfw3.lib;HawtLib.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>%VULKAN_SDK%\Lib;$(SolutionDir)\HawtLib\Build\Debug_DLL\Win32\Output;$(SolutionDir)\External\glfw\build\src\Debug</AdditionalLibraryDirectories>
+      <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -110,12 +115,18 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)\External\imgui\backends;$(SolutionDir)\External\imgui;%VULKAN_SDK%\Include;$(SolutionDir)\External\glfw\include;$(SolutionDir)\HawtLib\Build\Debug_DLL\Win32\Output</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>vulkan-1.lib;glfw3.lib;HawtLib.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>%VULKAN_SDK%\Lib;$(SolutionDir)\HawtLib\Build\Debug_DLL\Win32\Output;$(SolutionDir)\External\glfw\build\src\Release</AdditionalLibraryDirectories>
+      <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
+      <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -124,10 +135,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)\External\imgui-filebrowser;$(SolutionDir)/External/miniz-cpp;$(SolutionDir)External\ffmpeg-cpp\source\ffmpeg-cpp\simple_interface\;$(SolutionDir)External\ffmpeg-cpp\source\ffmpeg-cpp\ffmpeg-cpp\;$(SolutionDir)External\ffmpeg-cpp\ffmpeg\include;$(SolutionDir)External\ffmpeg-cpp\source\ffmpeg-cpp\ffmpeg-cpp\..\..\..\include;$(SolutionDir)\External\imgui\backends;$(SolutionDir)\External\imgui;%VULKAN_SDK%\Include;$(SolutionDir)\External\glfw\include;$(SolutionDir)External\HawtLib\HawtLib\Build\Includes</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>vulkan-1.lib;glfw3.lib;HawtLib.lib;ffmpeg-cpp.lib;simple_interface.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)External\ffmpeg-cpp\source\ffmpeg-cpp\ffmpeg-cpp\..\..\..\lib\x64\Debug\;$(SolutionDir)External\ffmpeg-cpp\source\ffmpeg-cpp\simple_interface\..\..\..\bin\x64\Debug\;%VULKAN_SDK%\Lib;$(SolutionDir)\External\HawtLib\HawtLib\Build\Debug_DLL\x64\Output;$(SolutionDir)\External\glfw\build\src\Debug</AdditionalLibraryDirectories>
+      <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -138,16 +154,34 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)\External\;$(SolutionDir)\External\imgui-filebrowser;$(SolutionDir)External\ffmpeg-cpp\source\ffmpeg-cpp\ffmpeg-cpp\;$(SolutionDir)External\ffmpeg-cpp\source\ffmpeg-cpp\ffmpeg-cpp\..\..\..\include;$(SolutionDir)/External/miniz-cpp;$(SolutionDir)External\ffmpeg-cpp\ffmpeg\include;$(SolutionDir)External\ffmpeg-cpp\source\ffmpeg-cpp\simple_interface\;$(SolutionDir)\External\imgui\backends;$(SolutionDir)\External\imgui;%VULKAN_SDK%\Include;$(SolutionDir)\External\glfw\include;$(SolutionDir)External\HawtLib\HawtLib\Build\Includes</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>vulkan-1.lib;glfw3.lib;HawtLib.lib;ffmpeg-cpp.lib;simple_interface.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)External\ffmpeg-cpp\source\ffmpeg-cpp\ffmpeg-cpp\..\..\..\lib\x64\Release\;$(SolutionDir)External\ffmpeg-cpp\source\ffmpeg-cpp\simple_interface\..\..\..\bin\x64\Release\;%VULKAN_SDK%\Lib;$(SolutionDir)\External\HawtLib\HawtLib\Build\Release_DLL\x64\Output;$(SolutionDir)\External\glfw\build\src\Release</AdditionalLibraryDirectories>
+      <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
+      <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source\Application.cpp" />
+    <ClCompile Include="Source\Core\VideoEffects.cpp" />
+    <ClCompile Include="Source\Ext\ffmpeg-cpp\Buildffmpeg-cpp.cpp" />
+    <ClCompile Include="Source\Ext\imgui\BuildImGui.cpp" />
+    <ClCompile Include="Source\Gui\CustomFont.h" />
+    <ClCompile Include="Source\Gui\GuiApp.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Source\Core\Core.h" />
+    <ClInclude Include="Source\Core\VideoEffects.h" />
+    <ClInclude Include="Source\Gui\GuiApp.h" />
+    <ClInclude Include="Source\Util\Environment.h" />
+    <ClInclude Include="Source\Util\Math.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
